--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/Biblioteca.png" alt="Explorando o mundo oculto">>
+            <img src="img/Biblioteca.png" alt="Explorando o mundo oculto">
             <p>Durante suas férias em Gravity Falls, você encontra um livro antigo e misterioso na biblioteca da cidade. O livro parece conter pistas sobre um enigma oculto que envolve uma antiga criatura lendária da cidade. Você decide investigar as pistas!</p>
             <button class="btn-proximo" data-proximo="1">Floresta Proibida</button>
             <button class="btn-proximo" data-proximo="2">Caverna do Mãozinhas</button>
